06.terraform/aws/terraform-eks-code/02.net-setup/cicd/01.vpc.tf
resource "aws_vpc" "vpc-cicd" {
  assign_generated_ipv6_cidr_block = false
  cidr_block                       = var.cicd-vpc-cidr
  enable_classiclink               = false
  enable_classiclink_dns_support   = false
  enable_dns_hostnames             = false
  enable_dns_support               = true
  instance_tenancy                 = "default"
  tags = {
    "Name"     = var.cicd-vpc-name
    "workshop" = var.cicd-vpc-name
  }
}
